# Clothoids-1

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: build-libraries.yml
include/: Clothoids.hh
include/Clothoids/: AABBtree.hxx  BaseCurve.hxx  BaseCurve_using.hxx  Biarc.hxx  BiarcList.hxx  Circle.hxx  Clothoid.hxx  ClothoidList.hxx  Constants.hxx  Fresnel.hxx  G2lib.hxx  Line.hxx  PolyLine.hxx  ThreadLocalData.hxx  Triangle2D.hxx  Types.hxx  Utils.hxx
src/: AABBtree.cc  Biarc.cc  BiarcList.cc  Circle.cc  Clothoid.cc  ClothoidDistance.cc  ClothoidG2.cc  ClothoidList.cc  ClothoidSpline-Interpolation.cc  ClothoidSpline-IpoptSolver.cc  ClothoidSpline-LMSolver.cc  Constants.cc  Format.hxx  Fresnel.cc  G2lib.cc  G2lib_intersect.cc  Line.cc  PolyLine.cc  Triangle2D.cc  Utils.hxx
src_py/: CMakeLists.txt
src_py/distrib/G2lib/: setup.py
src_py/distrib/G2lib/G2lib/: __init__.py
src_py/src/: python-AABBtree.cc  python-BaseCurve.cc  python-Biarc.cc  python-CircleArc.cc  python-Clothoid.cc  python-LineSegment.cc
src_py/test/: disabled_test_eval.py  test_interpolation.py  test_issues.py
